issue #7 and clean-up * EventExpiryService - new * EventQueueService - new * EventConsumer - new * EventMap - input validation deleteEvent, documentation * application.yml - new organization hierarchy * build.gradle - enable preview, toolchains