@@ -12,7 +12,7 @@ ext {
 
 group 'com.ericgha'
 version '0.0.1-SNAPSHOT'
-//mainClassName = 'com.ericgha.XXXX'
+
 sourceCompatibility = '19'
 
 repositories {
@@ -34,3 +34,22 @@ dependencies {
 test {
     useJUnitPlatform()
 }
+
+tasks.withType(JavaCompile) {
+    options.compilerArgs += "--enable-preview"
+}
+
+tasks.withType(Test) {
+    jvmArgs += "--enable-preview"
+}
+
+tasks.withType(JavaExec) {
+    jvmArgs += '--enable-preview'
+}
+
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(19)
+    }
+}
+
